{
  "version": 4,
  "terraform_version": "1.2.1",
  "serial": 84,
  "lineage": "6ede6b21-3874-ff3a-6d73-43bd0e1f7b88",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-11-07T15:36:04.112-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/adrabenche/global/firewalls/test-firewall-jenkins",
            "log_config": [],
            "name": "test-firewall-jenkins",
            "network": "https://www.googleapis.com/compute/v1/projects/adrabenche/global/networks/terraform-network",
            "priority": 1000,
            "project": "adrabenche",
            "self_link": "https://www.googleapis.com/compute/v1/projects/adrabenche/global/firewalls/test-firewall-jenkins",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "terraform-network-firewall-jenkins"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-11-07T15:36:04.114-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/adrabenche/global/firewalls/test-firewall-ssh",
            "log_config": [],
            "name": "test-firewall-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/adrabenche/global/networks/terraform-network",
            "priority": 1000,
            "project": "adrabenche",
            "self_link": "https://www.googleapis.com/compute/v1/projects/adrabenche/global/firewalls/test-firewall-ssh",
            "source_ranges": [
              "0.0.0.0/0",
              "190.16.39.179/32"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "terraform-network-firewall-ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20221102",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/adrabenche/zones/us-central1-c/disks/terraedit"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Cascade Lake",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/adrabenche/zones/us-central1-c/instances/terraedit",
            "instance_id": "3587215703943306",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n2-highcpu-2",
            "metadata": {
              "sshKeys": "adrabenche:ssh-rsa AAAB3NzaC1yc2EAAAADAQABAAACAQDOacxL1ivydoFWU/YGTCbA6+KqoTbofRlNFjGM1KHRyUwCytXI+7v61tcnjWucyWwia8dDzjHCJXVBedzdedKXBposO0vJSnkeC2+8wScVkT8S7cOM/4W9eF4ImlzXJQKUTW3U9ZjY2wWGZzt2v/oXiDIa+C1xmaJDsP6TLJJzBvq9Jw8Te7FK2uL/BoAgQ0aiZohiXOi0S7rQKvRLYjP0ccLRDSBtwm92rAXptQp/Y7cFF+c9fZ87ARtgAOrjBtRSre/2ZDctK8vJLc1tlWJni3QXpPwplbeFxQGz45VeaJnrDDXMRZlQIGOeWEUn+1kR69semqcAq8N6PuDYwGVU7VaBgFGr5HojoXulFyDhndsWfGst2ua3C6teFCyyXBj8OKacLEiYo/kKoBgFhx1s9Rg+x9y3wzzqdmzN2YMs [...]
              "startup_script": "sudo apt-get update\nsudo apt-get -y install \\\n    ca-certificates \\\n    curl \\\n    gnupg \\\n    lsb-release\n sudo mkdir -p /etc/apt/keyrings\n curl -fsSL https://download.docker.com/linux/debian/gpg | sudo gpg --dearmor -o /etc/apt/keyrings/docker.gpg\n echo \\\n  \"deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/debian \\\n  $(lsb_release -cs) stable\" | sudo tee /etc/apt/sources.list.d/do [...]
            },
            "metadata_fingerprint": "WV9Sv9BtxWA=",
            "name": "terraedit",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.28.200.122",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/adrabenche/global/networks/terraform-network",
                "network_ip": "10.128.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/adrabenche/regions/us-central1/subnetworks/terraform-network",
                "subnetwork_project": "adrabenche"
              }
            ],
            "project": "adrabenche",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/adrabenche/zones/us-central1-c/instances/terraedit",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "terraform-network-firewall-jenkins",
              "terraform-network-firewall-ssh"
            ],
            "tags_fingerprint": "n-osVghIEMw=",
            "zone": "us-central1-c"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/adrabenche/global/networks/terraform-network",
            "mtu": 0,
            "name": "terraform-network",
            "project": "adrabenche",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/adrabenche/global/networks/terraform-network"
          }
        }
      ]
    }
  ]
}